# albot-cpp

./: .cproject  .dockerignore  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeSettings.json  Dockerfile  DockerfileAlpine  DockerfileUbuntu  LICENSE  Makefile  README.md  albot-cpp.cpp  bot.json  callgrind.out.30629  cmake_install.cmake  compile_commands.json  docker-compose.yml  package.json  server.js  start.sh
.github/workflows/: alpine-build.yml  build.yml  ubuntu-build.yml
CODE/BScorpion/: CMakeLists.txt
CODE/BScorpion/src/: ArmorManager.cpp  ArmorManager.hpp  BotImpl.cpp  Functions.cpp  Functions.hpp  LightLoop.hpp  LightSocket.hpp  SkillHelper.cpp  SkillHelper.hpp  Targeter.cpp  Targeter.hpp
CODE/Default/: .cproject  .project  CMakeLists.txt  cmake_install.cmake  compile_commands.json
CODE/Default/src/: Bot.cpp  Bot.hpp  BotImpl.cpp  BotImpl.hpp  SocketWrapper.cpp  SocketWrapper.hpp
CODE/IXWebSocket/: cmake_install.cmake
HttpWrapper/: HttpWrapper.cpp  HttpWrapper.hpp
Maps/: abtesting.edge  abtesting.ele  abtesting.neigh  abtesting.node  abtesting.object.1.poly  abtesting.poly  abtesting.v.edge  abtesting.v.node  arena.edge  arena.ele  arena.neigh  arena.node  arena.object.1.poly  arena.object.2.poly  arena.object.3.poly  arena.poly  arena.v.edge  arena.v.node  bank.edge  bank.ele  bank.neigh  bank.node  bank.object.1.poly  bank.poly  bank.v.edge  bank.v.node  bank_b.edge  bank_b.ele  bank_b.neigh  bank_b.node  bank_b.object.1.poly  bank_b.object.2.poly  bank_b.object.3.poly  bank_b.object.4.poly  bank_b.object.5.poly  bank_b.poly  bank_b.v.edge  bank_b.v.node  bank_u.edge  bank_u.ele  (+640 more)
SERVICES/Default/: CMakeLists.txt
SERVICES/Default/src/: Service.cpp  Service.hpp
include/albot/: Bot.hpp  BotSkeleton.hpp  GameInfo.hpp  HttpWrapper.hpp  JsonUtils.hpp  MovementMath.hpp  ServiceInterface.hpp  SocketWrapper.hpp  albot-cpp.hpp  alclient-cpp.hpp
include/albot/Enums/: ClassEnum.hpp  MessageEnum.hpp
include/albot/MapProcessing/: MapProcessing.hpp
include/albot/Utils/: DoubleLinkedList.hpp  LoopHelper.hpp  ParsingUtils.hpp
src/: Bot.cpp  Bot.hpp  BotSkeleton.cpp  BotSkeleton.hpp  Common.cpp  Common.hpp  GameInfo.cpp  GameInfo.hpp  HttpWrapper.cpp  HttpWrapper.hpp  JsonUtils.cpp  JsonUtils.hpp  MapProcessing.cpp  MapProcessing.hpp  MovementMath.hpp  ServiceInterface.hpp  SocketWrapper.cpp  SocketWrapper.hpp  albot-cpp.cpp  alclient-cpp.cpp  alclient-cpp.hpp  code-base.hpp
src/Enums/: ClassEnum.hpp
src/GameInfo/: GameInfo.hpp
src/HttpWrapper/: HttpWrapper.cpp  HttpWrapper.hpp
src/JsonUtils/: JsonUtils.cpp  JsonUtils.hpp
src/MapProcessing/: MapProcessing.cpp  MapProcessing.hpp  Objectifier.cpp  Objectifier.hpp  ShapeManipulator.cpp  ShapeManipulator.hpp  Writer.cpp  Writer.hpp
src/Utils/: DoubleLinkedList.cpp  DoubleLinkedList.hpp  LoopHelper.hpp  ParsingUtils.hpp  Timer.hpp
